<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".business.device.BP550BT">

    <Button
        android:id="@+id/btnDisconnect"
        style="@style/BtnDefaultStyle"
        android:text="@string/function_item_button_disconnect" />
    <Button
        android:id="@+id/btnGetIdps"
        style="@style/BtnDefaultStyle"
        android:layout_marginTop="10dp"
        android:text="@string/po1_idps" />


    <TextView
        style="@style/FunctionHeadDefaultStyle"
        android:layout_marginTop="@dimen/function_btn_marge_top"
        android:text="@string/function_item_title_get_information" />

    <Button
        android:id="@+id/btn_getBattery"
        style="@style/BtnDefaultStyle"
        android:text="Get Battery" />

    <Button
        android:id="@+id/btn_getTime"
        style="@style/BtnDefaultStyle"
        android:layout_marginTop="10dp"
        android:text="Get Time" />

    <Button
        android:id="@+id/btn_getFunctionInfo"
        style="@style/BtnDefaultStyle"
        android:layout_marginTop="10dp"
        android:text="Get Function" />


    <TextView
        style="@style/FunctionHeadDefaultStyle"
        android:layout_marginTop="@dimen/function_btn_marge_top"
        android:text="@string/function_item_title_data" />

    <Button
        android:id="@+id/btnGetDataCount"
        style="@style/BtnDefaultStyle"
        android:layout_marginTop="@dimen/function_btn_marge_top"
        android:text="Get History Count " />

    <Button
        android:id="@+id/btnGetData"
        style="@style/BtnDefaultStyle"
        android:layout_marginTop="@dimen/function_btn_marge_top"
        android:text="Get Offline Data " />

    <Button
        android:id="@+id/btnDeleteData"
        style="@style/BtnDefaultStyle"
        android:layout_marginTop="@dimen/function_btn_marge_top"
        android:text="Delete Offline Data " />



</LinearLayout>